--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -27,6 +27,7 @@
     "express-flash-message": "^3.0.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^1.7.0",
     "pug": "^3.0.2",
     "sequelize": "^6.31.0"
